--- a/DBI.Data.Test/DBI.Data.Test.csproj
+++ b/DBI.Data.Test/DBI.Data.Test.csproj
@@ -113,6 +113,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="GLTest.cs" />
+    <Compile Include="OVERHEAD_BUDGET_FORECASTTest.cs" />
     <Compile Include="OVERHEAD_BUDGET_TYPESTest.cs" />
     <Compile Include="OVERHEAD_BUDGET_TYPETest.cs" />
     <Compile Include="Class1Test.cs" />
@@ -123,6 +124,7 @@
     <Compile Include="TIME_CLOCKTest.cs" />
     <Compile Include="ServiceUnitDataTest.cs" />
     <Compile Include="UnitTest1.cs" />
+    <Compile Include="UnitTest2.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DBI.Core\DBI.Core.csproj">
