--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -223,19 +223,19 @@
     <Content Include="Views\Modules\Overhead\umAddGLAccountForCategory.aspx" />
     <Content Include="Views\Modules\Overhead\umAddOverheadDetailLine.aspx" />
     <Content Include="Views\Modules\Overhead\umBudgetMain.aspx" />
-    <Content Include="Views\Modules\Overhead\umEditBudget.aspx" />
+    <Content Include="Views\Modules\Overhead\umEditBudgetVersion.aspx" />
     <Content Include="Views\Modules\Overhead\umImportActualsWindow.aspx" />
     <Content Include="Views\Modules\Overhead\umMassUpdateForecast.aspx" />
     <Content Include="Views\Modules\Overhead\umOpenBudgetType.aspx" />
     <Content Include="Views\Modules\Overhead\umOverheadBudgetPeriods.aspx" />
     <Content Include="Views\Modules\Overhead\umOverheadGeneralLedger.aspx" />
     <Content Include="Views\Modules\Overhead\umOverheadBudgetTypes.aspx" />
-    <Content Include="Views\Modules\Overhead\umOverheadMaintainBudgets.aspx" />
+    <Content Include="Views\Modules\Overhead\umBudgetVersions.aspx" />
     <Content Include="Views\Modules\Overhead\umOverheadOrganizationSecurity.aspx" />
     <Content Include="Views\Modules\Overhead\umOverheadSecurity.aspx" />
     <Content Include="Views\Modules\Overhead\umAddGLAccountRange.aspx" />
     <Content Include="Views\Modules\Overhead\umAddRemoveBudgetType.aspx" />
-    <Content Include="Views\Modules\Overhead\umAccountCategory.aspx" />
+    <Content Include="Views\Modules\Overhead\umCategoryMaint.aspx" />
     <Content Include="Views\Modules\Overhead\umViewActualsWindow.aspx" />
     <Content Include="Views\Modules\Security\Options\AddEdit\umAddEditProfileOptions.aspx" />
     <Content Include="Views\Modules\Security\umEditGroups.aspx" />
@@ -824,12 +824,12 @@
     <Compile Include="Views\Modules\Overhead\umBudgetMain.aspx.designer.cs">
       <DependentUpon>umBudgetMain.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Views\Modules\Overhead\umEditBudget.aspx.cs">
-      <DependentUpon>umEditBudget.aspx</DependentUpon>
+    <Compile Include="Views\Modules\Overhead\umEditBudgetVersion.aspx.cs">
+      <DependentUpon>umEditBudgetVersion.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Views\Modules\Overhead\umEditBudget.aspx.designer.cs">
-      <DependentUpon>umEditBudget.aspx</DependentUpon>
+    <Compile Include="Views\Modules\Overhead\umEditBudgetVersion.aspx.designer.cs">
+      <DependentUpon>umEditBudgetVersion.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\Overhead\umImportActualsWindow.aspx.cs">
       <DependentUpon>umImportActualsWindow.aspx</DependentUpon>
@@ -873,12 +873,12 @@
     <Compile Include="Views\Modules\Overhead\umOverheadBudgetTypes.aspx.designer.cs">
       <DependentUpon>umOverheadBudgetTypes.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Views\Modules\Overhead\umOverheadMaintainBudgets.aspx.cs">
-      <DependentUpon>umOverheadMaintainBudgets.aspx</DependentUpon>
+    <Compile Include="Views\Modules\Overhead\umBudgetVersions.aspx.cs">
+      <DependentUpon>umBudgetVersions.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Views\Modules\Overhead\umOverheadMaintainBudgets.aspx.designer.cs">
-      <DependentUpon>umOverheadMaintainBudgets.aspx</DependentUpon>
+    <Compile Include="Views\Modules\Overhead\umBudgetVersions.aspx.designer.cs">
+      <DependentUpon>umBudgetVersions.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\Overhead\umOverheadOrganizationSecurity.aspx.cs">
       <DependentUpon>umOverheadOrganizationSecurity.aspx</DependentUpon>
@@ -908,12 +908,12 @@
     <Compile Include="Views\Modules\Overhead\umAddRemoveBudgetType.aspx.designer.cs">
       <DependentUpon>umAddRemoveBudgetType.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Views\Modules\Overhead\umAccountCategory.aspx.cs">
-      <DependentUpon>umAccountCategory.aspx</DependentUpon>
+    <Compile Include="Views\Modules\Overhead\umCategoryMaint.aspx.cs">
+      <DependentUpon>umCategoryMaint.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Views\Modules\Overhead\umAccountCategory.aspx.designer.cs">
-      <DependentUpon>umAccountCategory.aspx</DependentUpon>
+    <Compile Include="Views\Modules\Overhead\umCategoryMaint.aspx.designer.cs">
+      <DependentUpon>umCategoryMaint.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\Overhead\umViewActualsWindow.aspx.cs">
       <DependentUpon>umViewActualsWindow.aspx</DependentUpon>
