--- a/DBI.Data.Test/DBI.Data.Test.csproj
+++ b/DBI.Data.Test/DBI.Data.Test.csproj
@@ -120,6 +120,7 @@
     <Compile Include="CROSSINGSTest.cs" />
     <Compile Include="OVERHEAD_ORG_BUDGETSTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SYS_ORG_PROFILE_OPTIONSTest.cs" />
     <Compile Include="SYS_USER_PROFILE_OPTIONSTest.cs" />
     <Compile Include="TIME_CLOCKTest.cs" />
     <Compile Include="ServiceUnitDataTest.cs" />
